# rag-chat-app

./: 1.lanchain_llm_test.ipynb  2.rag_with_chroma.ipynb  4.rag_with_pinecone.ipynb  README.md  evaluate.ipynb  for_streamlit.ipynb  pyproject.toml
chroma/: chroma.sqlite3
docs/: tax.docx  tax_with_markdown_table.docx  tax_with_table.docx
streamlit/: chat.py  config.py  llm.py
