[tool.poetry]
name = "rag-llm어플리케이션실습"
version = "0.1.0"
description = ""
authors = ["김동현 <donghyeon.kim>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "1.26.4"
yarl = "1.15.2"
langchain-pinecone = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
